refactor:스트림 collect를 toList로 변경
Former-commit-id: 48659047e08d14b7b9ef7acad0758574c560ff76