@@ -5,7 +5,6 @@ import com.ssafy.s12p21d206.achu.chat.domain.MessageType;
 import com.ssafy.s12p21d206.achu.chat.domain.user.ChatUser;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record MessageDto(
     Long id,
@@ -27,8 +26,6 @@ public record MessageDto(
   }
 
   public static List<MessageDto> listFrom(List<Message> messages, ChatUser currentUser) {
-    return messages.stream()
-        .map(message -> from(message, currentUser))
-        .collect(Collectors.toList());
+    return messages.stream().map(message -> from(message, currentUser)).toList();
   }
 }
